--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,1 +1,11 @@
-<h2>Create a new drone</h2>
+<form method="post" action="/drones/create" class="form">
+    <h2>Create a new drone</h2>
+  <label class="label">Name</label>
+  <input class="input" type="text" name="name" />
+  <label class="label">Propellers</label>
+  <input class="input" type="Number" name="propellers" />
+  <label class="label">Max Speed</label>
+  <input class="input" type="Number" name="max speed" />
+
+  <button class="button">create</button>
+</form>
