--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,9 +8,13 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
-
+    
   <body>
-
+    <nav>
+      <a href="/">drones</a>
+      <a href="/drones">list</a>
+      <a href="/drones/create">create</a>
+    </nav>
     {{{body}}}
 
     <script src="/js/script.js"></script>
