--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,1 +1,11 @@
-<h2>Update the drone</h2>
+<form method="post" action="/drones/update/{{drone._id}}" class="form">
+    <h2>Update the drone</h2>
+    <label class="label">Name</label>
+    <input class="input" type="text" name="name" value="{{drone.name}}" />
+    <label class="label">Propellers</label>
+    <input class="input" type="number" name="propellers" value="{{drone.propellers}}"/>
+    <label class="label">Max Speed</label>
+    <input class="input" type="number" name="maxspeed" value="{{drone.maxSpeed}}"/>
+
+    <button class="button">update</button>
+</form>
